[package]
name = "nssqlite"
version = "0.1.0"
authors = ["Thomas Desrosiers <git@hive.pw>"]
edition = "2018"

[lib]
name = "nss_sqlite"
crate-type = [ "cdylib", "lib" ]

[dependencies]
libc = "0.2"
lazy_static = "1"
paste = "0.1.6"
libnss = { git = "https://github.com/csnewman/libnss-rs", rev = "be24e70b207c4355712de6706e4025fb113fa09c" }
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1"

[dev-dependencies]
users = "0.11"
tempfile = "3"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
required-features = ["dynamic_paths"]

[features]
default = ["rusqlite/bundled"]

# dynamic_paths lets you control where code expects to find the sqlite databases
# based on each process's environment variables
dynamic_paths = []
